--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -90,7 +90,7 @@ Klicke dazu in der Spalte *Aktionen* auf die Schaltfläche *Plugin-Set kopieren*
 . Wähle das Prohandel-Plugin aus der Liste. +
 → Es werden Informationen zu dem Plugin angezeigt.
 . Wähle aus der Dropdown-Liste *Version auswählen* die Version des Plugins, die du installieren möchtest.
-Standardmäßig ist die neuste Version vorausgewählt.
+Die aktuelle Version ist vorausgewählt.
 . Um das Plugin zu installieren, klicke auf icon:arrow-down[role="darkGrey"] *Installieren*. +
 → Das Plugin wird installiert. +
 → Nachdem das Installieren abgeschlossen ist, wird das Plugin-Set angezeigt.
