--- a/docs/de-de/modules/maerkte/pages/conrad.adoc
+++ b/docs/de-de/modules/maerkte/pages/conrad.adoc
@@ -6,6 +6,8 @@
 
 :conrad:
 :market: Conrad
+:plugin-name: Conrad
+:plugin-link: https://marketplace.plentymarkets.com/conradextension_6948
 :type-of-market: B2B-Marktplatz
 :registration-url: https://www.conrad.de/de/service/bestellung-und-beschaffung/marketplace.html
 :marketplace-url: https://marketplace.plentymarkets.com/conradextension_6948
@@ -55,7 +57,7 @@ include::partial$mirakl-creating-properties.adoc[]
 include::partial$mirakl-market-assistant.adoc[]
 
 [#allgemeine-informationen]
-== Informationen zum automatischen Datenaustausch
+== Häufigkeit des Datenaustauschs
 
 include::partial$mirakl-data-exchange-table.adoc[]
 
@@ -84,13 +86,11 @@ Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplat
 
 *_Hinweis:_* Pflichtfelder, die an den Marktplatz übertragen werden müssen, sind mit *** gekennzeichnet. Diesen Feldern muss ein plentymarkets Datenfeld zugeordnet werden, da ansonsten keine Daten für das Feld des Marktplatzes übertragen werden können.
 
-[TIP]
-.Eigenschaften verwenden
-====
-Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Daten für Marktplatz-Datenfelder zu übertragen, für die es keine eigene Einstellung in plentymarkets gibt.
-====
-
 include::partial$catalogue-mapping.adoc[]
+
+=== Empfehlungen für Datenfeld-Zuordnungen
+
+include::partial$recommendation-text.adoc[]
 
 :mirakl-conrad-inhalt-einheit:
 :mirakl-attribut-hilfetool:
