--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -67,7 +67,7 @@ include::partial$plugin-installation.adoc[]
 [#300]
 == Marktplatz in plentymarkets einrichten
 
-Nachdem du das limango-Plugin installiert hast, richtest du den Marktplatz in plentymarkets ein.
+Du hast das limango-Plugin installiert? Super. Nun richtest du den Marktplatz in plentymarkets ein.
 
 === Grundeinstellungen vornehmen
 
