--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -5,11 +5,12 @@
 
 :mediamarkt:
 :market: MediaMarkt
+:plugin-name: MediaMarkt
+:plugin-link: https://marketplace.plentymarkets.com/mediamarkt_6918
 :type-of-market: Marktplatz
 :registration-url: https://www.mediamarkt.de/de/about-us/marketplace
 :marketplace-url: https://marketplace.plentymarkets.com/mediamarkt_6918
 :assistant-name: MediaMarkt
-
 
 Auf dieser Seite erfährst du, wie du die Schnittstelle zu {market} in plentymarkets einrichtest. Auf MediaMarkt finden Kund:innen eine große Produktauswahl rund um Technik, Elektronik und Multimedia.
 
@@ -55,7 +56,7 @@ include::partial$mirakl-market-assistant.adoc[]
 :category-example: VIDEO CASSETTES
 
 [#allgemeine-informationen]
-== Informationen zum automatischen Datenaustausch
+== Häufigkeit des Datenaustauschs
 
 include::partial$mirakl-data-exchange-table.adoc[]
 
@@ -82,13 +83,12 @@ include::partial$catalogue-assistant-config.adoc[]
 
 Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplatzes den in plentymarkets gespeicherten Artikeldaten zu. Informationen dazu, welche Daten für welches Datenfeld des Marktplatzes übertragen werden müssen, findest du in der Dokumentation des Marktplatzes.
 
-[TIP]
-.Eigenschaften verwenden
-====
-Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
-====
-
 include::partial$catalogue-mapping.adoc[]
+
+[#recommended-mappings]
+=== Empfehlungen für Datenfeld-Zuordnungen
+
+include::partial$recommendation-text.adoc[]
 
 [[katalog-mirakl-zuordnungen]]
 .{market}-Zuordnungen
@@ -97,11 +97,9 @@ include::partial$catalogue-mapping.adoc[]
 |Marktplatz-Datenfeld |plentymarkets Datenfeld
 
 | *Brand*
-a| Erstelle für dieses Marktplatz-Datenfeld eine Eigenschaft vom Typ *Text*. Erstelle einen Eigenschaftswert für alle Einheiten, die du für deine Produkte verwendest. Achte darauf, den Code einzugeben und nicht das Label. +
+a| Erstelle für dieses Marktplatz-Datenfeld eine Eigenschaft vom Typ *Text*.
 
 *_Tipp:_* Alle möglichen Werte findest du in der entsprechenden CSV-Datei. +
-
-*_Hinweis:_* Beachte, dass du für dieses Marktplatz-Datenfeld _keine_ Eigenschaften vom Typ *Mehrfachauswahl* verwenden kannst. Beim Versuch eine Eigenschaft vom Typ *Mehrfachauswahl* im Katalog zuzuordnen, wird dies zu einer Fehlübertragung führen.
 
 | *Title*
 a| Ordne für dieses Marktplatz-Datenfeld eines oder mehrere der folgenden plentymarkets Datenfelder zu. Verwende mindestens 20 und maximal 100 Zeichen. +
@@ -144,7 +142,7 @@ Ordne das folgende plentymarkets Datenfeld als Ausweich-Datenfeld zu:
 
 * *Variante » Varianten-ID*
 
-| *Weight (according to the manufacturer)**
+| *Weight (according to the manufacturer)*
 a| Ordne für dieses Marktplatz-Datenfeld das folgende plentymarkets Datenfeld zu:
 
 * *Variante » Gewicht Brutto g*
@@ -169,7 +167,7 @@ a| Ordne für dieses Marktplatz-Datenfeld das folgende plentymarkets Datenfeld z
 * *Variante » Länge mm*
 
 | _Datenfelder für Bilder_
-| Beim Marktplatz {market} werden Zuordnungen für Produktbilder aktuell ignoriert. Variantenbilder werden automatisch exportiert. Die Bilder werden anhand der Bildposition priorisiert.
+| Beim Marktplatz {market} werden Katalogzuordnungen für Produktbilder aktuell ignoriert. Variantenbilder werden automatisch exportiert. Die Bilder werden anhand der Bildposition priorisiert.
 
 *_Beispiel:_* Für das Marktplatz-Datenfeld *Main Product Image* wird das Bild der Variante mit der niedrigsten Position exportiert.
 
@@ -179,7 +177,7 @@ Die folgenden Marktplatz-Datenfeld werden also automatisch befüllt, egal welche
 * Additional Product Image 1
 * Additional Product Image 2
 
-| _Datenfelder *[Datenfeld] (ES)*_
+| _Datenfelder mit Zusatz *(ES)*_
 |
 Ordne Marktplatz-Datenfelder mit dem Zusatz *(ES)* kein plentymarkets Datenfeld zu. Deine Produkte werden trotzdem zu MIRAKL exportiert.
 |===
