--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -81,3 +81,34 @@ latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobesta
 latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobestand} + (\mbox{nachbestellte Menge})}]
 
 ---
+
+
+
+ifdef::voelkner[]
+| Datenfelder für Angebotspreise: +
+*Rabatt Startzeit* +
+*Rabatt Endzeit*
+
+| Optional kannst du zeitlich begrenzte Angebotspreise an Voelkner übermitteln.
+
+Voraussetzungen für den korrekten Export von Angebotspreisen:
+
+* Du hast einen Verkaufspreis des Typs *Aktionspreis* erstellt. +
+  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+. Du hast eine Eigenschaft des Typs *Datum* für das Startdatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Startzeit*.
+. Du hast eine Eigenschaft des Typs *Datum* für das Enddatum erstellt. Nenne diese Eigenschaft zum Beispiel *Voelkner Rabatt Endzeit*.
+* Du hast im Katalog die folgenden Zuordnungen vorgenommen:
+  ** Marktplatz-Datenfeld *Angebotspreis* = plentymarkets Verkaufspreis des Typs *Aktionspreis*
+  ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
+  ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
+
+[.instruction]
+Angebotspreis festlegen:
+
+. Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
+. Speichere einen Preis für den Aktionspreis.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
+. Speichere ein Datum für die Eigenschaft.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
+. Speichere ein Datum für die Eigenschaft.
+endif::voelkner[]
