--- a/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
@@ -1,38 +1,33 @@
-Mit dem Attribut-Hilfetool kannst du die verschiedenen Attribute suchen und dir die aktuell gültigen Werte für die Attribute ansehen. Um das Tool nutzen zu können, musst du den Assistenten *{assistant-name}* bereits abgeschlossen haben. +
+Im Katalog siehst du die Marktplatz-Datenfelder, die du an {market} exportieren kannst. {market} nennt diese Datenfelder auch Attribute. Der Marktplatz erwartet bei den meisten Datenfeldern spezifische Werte. Hierbei hilft dir das *Attribut-Hilfetool*. In diesem Tool gibst du die Datenfelder ein und kannst dir die aktuell gültigen Werte für diese Datenfelder ansehen. Um das Tool zu nutzen musst du den Assistenten *{assistant-name}* abgeschlossen haben.
 
-Das Attribut-Hilfetool findest du unter der URL `domain/marketplace_extension/attribute_values`.
-Trage anstelle von `domain` deine plentymarkets Domain ein.
+*_Tipps:_*
 
-*_Beispiel:_* Bei der plentymarkets Domain `https://www.meine-plenty-domain.de` lautet die URL `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`. +
+* Gib `SAP.TaxIndicator` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Umsatzsteuerklasse* zu finden. +
+* Gib `SAP.BaseUnits` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Verkaufsmengeneinheit* zu finden.
 
-*_Fehlerbehebung:_* Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen *Hier entsteht dein plentymarkets Shop*? Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
-
-*_Tipp:_* +
-Gib `SAP.TaxIndicator` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Umsatzsteuerklasse* zu finden. +
-Gib `SAP.BaseUnits` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Verkaufsmengeneinheit* zu finden.
-
-[IMPORTANT]
-.Ausgabe der Attributwerte am nächsten Tag
-====
-Die Tabelle der gültigen Attributwerte wird jeweils über Nacht aktualisiert. Nach dem Installieren des Plugins in deinem plentymarkets System werden die gültigen Werte erst am nächsten Tag ausgegeben. +
-Wenn du im Assistenten die falsche API-Umgebung und/oder den falschen API-Schlüssel eingetragen hast, können die gültigen Attributwerte nicht geladen werden.
-====
-
-Im Katalog findest du die Benennungen der Marktplatzattribute, wie zum Beispiel *Marke*. Um die für ein Attribut gültigen Werte herauszufinden, gehe vor wie unten beschrieben.
+Um die gültigen Werte für ein Datenfeld herauszufinden, gehe wie unten beschrieben vor.
 
 [.instruction]
-Das Attribut-Hilfetool verwenden:
+Attribut-Hilfetool nutzen:
 
-. Gib die URL in deinem Browser ein. +
-→ Das Attribut-Hilfetool findest du unter der folgenden URL: `domain/marketplace_extension/attribute_values`. Trage anstelle von `domain` deine plenty Domain ein. Würde deine plenty Domain beispielsweise `https://www.meine-plenty-domain.de` lauten, wäre die URL wie folgt aufgebaut: `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`.
-. Gib den Namen des Attributes in die Suche ein oder nutze Strg+F bzw. Cmd+F, um die Ergebnisliste zu durchsuchen. +
-→ In der Spalte *Attribute Label* ist das Attribut zu sehen. +
-→ In der Spalte *Value Code* sind die gültigen Werte aufgeführt, die für die Attributwerte in der Spalte *Value Label* übertragen werden müssen.
+. Gib die folgende URL in deinen Browser ein: +
+  * `[domain]/{market-attribute-help-tool}_extension/attribute_values`
+. Ersetze `domain` durch deine plentymarkets Domain. +
+*_Beispiel:_* Bei der plentymarkets Domain `https://www.meine-plenty-domain.de` lautet die URL `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`.
+. Gib den Namen des Datenfelds in die Suche ein oder nutze Strg+F oder Cmd+F, um die Ergebnisliste zu durchsuchen. +
+→ In der Spalte *Attribute Label* steht das Datenfeld. +
+→ In der Spalte *Value Code* stehen die Werte, die für das Datenfeld übertragen werden können.
 
 === Gültige Attributwerte zuordnen und übertragen
 
-Hast du - je nach Variante, die übertragen werden soll - unterschiedliche Attributwerte, die gültig sein könnten, stellt sich zunächst die Frage, über welche Vorgehensweise du deine Artikeldaten aktuell hältst.
-Verwaltest du deine Artikeldaten manuell, ist eine Eigenschaft vom Typ *Auswahl* empfehlenswert. Hier kannst du für die Auswahl eine Beschreibung hinterlegen. Diese wird dann in der Übersicht der Eigenschaften an der Variante angezeigt.
-Wenn der Code der Eigenschaft zugeordnet wurde, kannst du den realen Namen der Variante im Feld *Beschreibung* verwenden. Das bedeutet, über den Katalog wird dann der Code übertragen und dahinter in Klammern der reale Name angezeigt. +
+Die meisten Attributwerte von {market} sind Codes und deshalb eher kryptisch. Ein gutes Beispiel sind die Marken. Hier wird der Code nach dem Muster `BRAND_12345678` gebildet. Damit du trotzdem den Überblick behältst und die Werte bequem mit deinen Varianten verknüpfen kannst, empfehlen wir dir das folgende Vorgehen:
 
-*_Tipp:_* Wenn du für ein Attribut immer nur einen einzigen Wert übertragen möchtest, z.B. als Marke immer *BRAND_12345678*, kannst du die Option *Eigener Wert* im Katalog verwenden.
+* Erstelle eine Eigenschaft vom Typ *Auswahl*.
+* Speichere die Codes als Auswahlwerte.
+* Speichere den Klarnamen des Codes im Feld *Beschreibung* des Werts.
+* Verknüpfe die Eigenschaft mit der Variante.
+* Klicke in der Spalte *Wert* auf die Dropdown-Liste.
+→ In der Liste der Werte wird hinter dem Code die Beschreibung in Klammern angezeigt. +
+→ Über den Katalog wird nur der Code übertragen.
+
+*_Tipp:_* Wenn du für jede Variante denselben Wert übertragen möchtest, kannst du die Option *Eigener Wert* im Katalog verwenden.
