--- a/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
@@ -1,17 +1,22 @@
-Bei {market} erfolgt der Listingprozess in zwei Schritten: Zuerst werden Produkte erstellt und nach Freigabe der Produktdaten vom Marktplatz können Angebote zu den erstellten Produkten aktiviert werden. Beide Exportprozesse, deren Voraussetzungen sowie Übertragungsoptionen werden in den folgenden Unterkapiteln beschrieben.
+Bei {market} erfolgt der Listingprozess in zwei Schritten:
+
+* Zuerst werden Produkte erstellt.
+* Nach Freigabe der Produktdaten vom Marktplatz können Angebote zu den erstellten Produkten aktiviert werden.
+
+Beide Exportprozesse, ihre Voraussetzungen und Übertragungsoptionen werden in den folgenden Unterkapiteln beschrieben.
 
 [#produktdaten-ubertragen]
-=== Produktdaten übertragen
-
-In diesem Kapitel erfährst du, wie du Produktdaten an den Marktplatz überträgst und welche Voraussetzungen erfüllt werden müssen. Diese Daten kommen aus dem von dir erstellten Katalog *{assistant-name} Catalog*.
-
 === Voraussetzungen für die Produktdatenübertragung
+
+Die Produktdaten kommen aus dem von dir erstellten Katalog *{assistant-name} Catalog*. Die folgenden Voraussetzungen müssen erfüllt sein, damit Produktdaten übertragen werden.
 
 * Die Plugins link:{marketplace-url}[{market}^] sowie *Mirakl Connector* wurden im plentyMarketplace gekauft, heruntergeladen und in einem Plugin-Set installiert und bereitgestellt.
 * Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte {market} und Mirakl aktiviert.
-* Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen. Für die Produktübertragung muss die Option *Produkte exportieren* im Schritt Datenaustausch aktiv sein.
-* Im Menü *Einrichtung » Artikel » Verkaufspreise* wurden die Auftragsherkünfte *Mirakl* sowie *{assistant-name}* an einem bestehenden Preis aktiviert *_oder_* es wurde ein neuer Verkaufspreis erstellt, bei dem die Auftragsherkünfte *Mirakl* und *{assistant-name}*  aktiviert wurden.
-* Du hast bereits einen xref:daten:marktplatzexport.adoc#[Katalog] für die Übertragung der Daten erstellt.
+* Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen. +
+*_Wichtig:_* Für die Produktübertragung muss die Option *Produkte exportieren* im Schritt *Datenaustausch* aktiv sein.
+* Im Menü *Einrichtung » Artikel » Verkaufspreise* wurden die Auftragsherkünfte *Mirakl* und *{assistant-name}* an einem bestehenden Preis aktiviert. +
+*_Oder:_* Ein neuer Verkaufspreis wurde erstellt, bei dem die Auftragsherkünfte *Mirakl* und *{assistant-name}*  aktiviert wurden.
+* Du hast einen xref:daten:marktplatzexport.adoc#[Katalog] für die Übertragung der Daten erstellt.
 
 ifdef::conrad[]
 [IMPORTANT]
@@ -63,13 +68,13 @@ Daraus ergeben sich die folgenden Zuordnungen für die Produktübertragung:
 ifdef::conrad,voelkner[]
 === Produktdaten aktualisieren
 
-Du kannst zu jeder Zeit eine Aktualisierung der Produktdaten vornehmen. Ausgeschlossen davon sind jedoch die folgenden Produktdaten:
+Du kannst Produktdaten jederzeit aktualisieren. Ausgeschlossen davon sind jedoch die folgenden Produktdaten:
 
 * Verpackungseinheiten
 * Hersteller-Teilenummer
 * Artikelnummer des Verkäufers
 
-Wenn du eines oder mehrere der o.g. Felder ändern möchtest, musst du das Produkt zuerst löschen und dann neu übertragen. Gehe dazu vor wie folgt:
+Wenn du eines oder mehrere dieser Felder ändern möchtest, musst du das Produkt zuerst löschen und dann neu übertragen. Das geht so:
 
 [.instruction]
 Produktdaten aktualisieren:
@@ -78,10 +83,10 @@ Produktdaten aktualisieren:
 . Erstelle eine Eigenschaft des Typs *Text*.
 . Gib einen Namen ein, zum Beispiel *Marktplatz-Produkt löschen*.
 . Öffne das Menü *Daten » Kataloge*.
-. Öffne den entsprechenden Katalog.
-. Ordne dem Datenfeld *Product Invalidierungs Markierung* bzw. *InvalidationFlag* die Eigenschaft zum Löschen des Produkts, die du gerade erstellt hast, zu.
+. Öffne den {market}-Katalog.
+. Ordne dem Datenfeld *Product Invalidierungs Markierung* bzw. *InvalidationFlag* die Eigenschaft zu, die du gerade erstellt hast.
 . Öffne den Assistenten.
-. Gehe in den Schritt *Zuordnung der Angebots- Eigenschaften*.
+. Gehe in den Schritt *Zuordnung der Angebots-Eigenschaften*.
 . Ordne der Eigenschaft *{market} Update-Delete* das Datenfeld *update-delete* zu.
 . Wähle an der zu löschenden Variante den Auswahlwert *delete*. +
 *_Hinweis:_* Eine Bestands- oder Preisänderung der Variante kann einige Zeit dauern. Alternativ kannst du diese Änderung manuell vornehmen.
@@ -92,11 +97,11 @@ Produktdaten aktualisieren:
 . Lösche das Angebot zu dem Produkt manuell im Backend des Marktplatzes.
 . Aktiviere an der entsprechenden Variante die Eigenschaft, die du für das Löschen des Produkts erstellt hast, und hinterlege den Wert *kill*.
 . Aktiviere die Eigenschaft für die Katalogverknüpfung an der Variante.
-. Warte bis zur nächsten Übertragung der Produkte. +
-→  Diese findet über Nacht statt.
+. Warte, bis die Produkte das nächste Mal übertragen wurden. +
+→  Die Übertragung findet über Nacht statt.
 . Nachdem du das Produkt gelöscht hast, musst du 24 bis 48 Stunden warten, bis du die gleiche Produkt-ID wieder verwenden darfst.
-. Entferne nach der Wartezeit die Eigenschaft, die du für das Löschen des Produkts erstellt hast, von der Variante.
-. Aktiviere an der Variante die Marktplatzverfügbarkeit für den Marktplatz und Mirakl erneut.
+. Entferne nach der Wartezeit die Eigenschaft von der Variante, die du für das Löschen des Produkts erstellt hast.
+. Aktiviere an der Variante die Marktplatzverfügbarkeit für den Marktplatz und für Mirakl.
 endif::conrad,voelkner[]
 
 ifdef::voelkner[]
