--- a/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
@@ -1,5 +1,5 @@
 [.collapseBox]
-.Plugin *{plugin}* zum System hinzufügen und installieren
+.*{plugin}*: Plugin zum System hinzufügen und installieren
 --
 
 [.instruction]
@@ -21,6 +21,7 @@ Plugin installieren:
 
 . Öffne das Menü *Plugins » Plugin-Set-Übersicht*.
 . Klicke auf das Plugin-Set, in dem du das Plugin installieren möchtest. +
+ifdef::main-client[*_Hinweis:_* Das Plugin-Set muss mit dem Hauptmandanten verknüpft sein. +]
 → Das Plugin-Set wird geöffnet.
 . Klicke auf icon:plus-square[role=green] *Plugin hinzufügen*.
 . Wähle das Plugin *{plugin}* aus der Liste.
