--- a/docs/de-de/modules/maerkte/partials/assistant-basic-instructions.adoc
+++ b/docs/de-de/modules/maerkte/partials/assistant-basic-instructions.adoc
@@ -17,7 +17,7 @@ ifdef::amazon-basic-assistant[]
 *_Tipp:_* Für jede Kombination aus Amazon-Konto und Amazon-Plattform wird im Menü *Einrichtung » Märkte » Amazon » Einstellungen* ein separates Konto erstellt.
 . Öffne das Menü *Einrichtung » Märkte » Amazon » Einstellungen*.
 . Öffne das Konto.
-. Prüfe die Einstellungen und nimm bei Bedarf Änderungen oder zusätzliche Einstellungen vor.
+. Prüfe die Einstellungen. Nimm bei Bedarf Änderungen oder zusätzliche Einstellungen vor.
 endif::amazon-basic-assistant[]
 
 ////
