--- a/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
+++ b/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
@@ -10,10 +10,11 @@ Die Auftragsherkunft zeigt an, auf welchem Verkaufskanal ein Auftrag erzeugt wur
 Auftragsherkunft für {referrer} aktivieren:
 
 . Öffne das Menü *Einrichtung » Aufträge » Auftragsherkunft*.
-. Aktiviere die {referrer-option}.
 ifdef::mirakl-auftragsherkunft[]
 . Aktiviere die Herkunft *Mirakl*.
 endif::mirakl-auftragsherkunft[]
+. Aktiviere die {referrer-option}. +
+ifdef::plugin-name[*_Tipp:_* Die Auftragsherkunft ist nicht in der Liste? Dann hast du wahrscheinlich das Plugin noch nicht installiert.]
 ifdef::idealo-direkt[]
 . *_Optional:_* Wenn du idealo Direktkauf nutzen möchtest, aktiviere die Auftragsherkunft *idealo Direktkauf* mit der ID *121.02*. +
 → Wenn du die Auftragsherkunft *idealo Direktkauf* aktivierst, wird in der über den elastischen Export erzeugten CSV-Datei die Spalte *checkout_approved* auf *true* gesetzt.
