--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -13,7 +13,7 @@ image::maerkte:catalogue-menu-colours.png[]
 * *plentymarkets Datenfelder* Im linken Bereich des Katalogs ordnest du den Marktplatz-Datenfeldern passende plentymarkets Datenfelder zu. Im Screenshot wurden schon einige Felder zugeordnet.
 --
 
-* Freitextfelder und Merkmale können über Kataloge nicht mehr exportiert werden. Verwende stattdessen xref:artikel:eigenschaften.adoc#500[Eigenschaften].
+* Freitextfelder und Merkmale können über Kataloge nicht exportiert werden. Verwende stattdessen xref:artikel:eigenschaften.adoc#500[Eigenschaften].
 
 [.instruction]
 Katalogzuordnungen erstellen:
