--- a/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-markets-faq.adoc
@@ -27,3 +27,20 @@ Prüfe als erstes die Bestandseinstellungen: Betrifft das Problem nur Varianten 
 *_Wichtig:_* Angebote für Varianten ohne Bestandsbindung werden einmal pro Nacht zu {market} exportiert. Wenn du die Einstellungen korrigierst, werden die Varianten also nicht sofort exportiert.
 
 --
+
+[.collapseBox]
+.Du kannst nicht auf das Attribut-Hilfetool zugreifen.
+--
+*_Mögliche Ursachen:_*
+
+* Du hast den Assistenten *{assistant-name}* noch nicht abgeschlossen.
+* Du sieht stattdessen *Hier entsteht dein plentymarkets Shop*? Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
+* Die Tabelle der gültigen Attributwerte wird immer über Nacht aktualisiert. Nach dem Installieren des Plugins in deinem plentymarkets System werden die gültigen Werte also erst am nächsten Tag ausgegeben.
+* Wenn du im Assistenten die falsche API-Umgebung und/oder den falschen API-Schlüssel eingetragen hast, können die gültigen Attributwerte nicht geladen werden.
+--
+
+[.collapseBox]
+.Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen *Hier entsteht dein plentymarkets Shop*
+--
+Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü Einrichtung » Mandant » Standard » Webshop » Shop sperren. Vergiss nicht, den plentyShop danach wieder zu sperren.
+--
