--- a/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
+++ b/docs/de-de/modules/maerkte/partials/verkaufspreis-festlegen.adoc
@@ -1,4 +1,4 @@
-Mit Verkaufspreisen legst du die Bedingungen fest, unter denen eine Variante zu einem bestimmten Preis und über einen bestimmten Verkaufskanal verkauft wird. Um Varianten auf {referrer} zu verkaufen, benötigst du deshalb einen Verkaufspreis, bei dem die Auftragsherkunft {referrer} aktiviert ist. Der Preis, den du für diesen Verkaufspreis an deinen Varianten speicherst, wird auf {referrer} angezeigt.
+Mit Verkaufspreisen legst du die Bedingungen fest, unter denen eine Variante zu einem bestimmten Preis und über einen bestimmten Verkaufskanal verkauft wird. Um Varianten auf {referrer} zu verkaufen, benötigst du deshalb einen Verkaufspreis, bei dem die Auftragsherkunft *{referrer}* aktiviert ist. Der Preis, den du für diesen Verkaufspreis an deinen Varianten speicherst, wird auf {referrer} angezeigt.
 
 [.collapseBox]
 .Was ist ein Verkaufspreis?
@@ -16,7 +16,7 @@ endif::kaufland[]
 Verkaufspreis für {referrer} festlegen:
 
 . Öffne das Menü *Einrichtung » Artikel » Verkaufspreise » [Verkaufspreis öffnen]*. +
-*_Tipp:_* Du hast noch keine Verkaufspreise? Dann erstelle zuerst einen xref:artikel:preise.adoc#100[neuen Verkaufspreis].
+*_Tipp:_* Du hast noch keine Verkaufspreise? Dann erstelle zuerst einen xref:artikel:preise.adoc#100[Verkaufspreis].
 . Wechsele in das Tab *Einstellungen*.
 . Aktiviere die Herkunft *{referrer}*. +
 ifdef::zalando[*_Wichtig:_* Aktiviere die Herkunft *Zalando*. Die Unterherkünfte für die einzelnen Zalando-Plattformen (Zalando DE, Zalando NL usw.) werden ignoriert.]
