--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -126,13 +126,28 @@ Prüfen, wo Inhalt hingehört, wenn einkommentiert wird.
 In der ZIP-Datei link:{valid-values-zip}[{market}: Gültige Werte^] findest du CSV-Dateien für jedes Marktplatzattribut. Innerhalb einer CSV-Datei sind die gültigen Werte für das Attribut abgebildet. Den Wert, der übertragen werden muss, findest du immer in der Spalte *Code*.
 ////
 
+[#prepare-variations]
+== Varianten vorbereiten
+
+Bereite nun deine Varianten vor.
+
+[#variantenverfuegbarkeit]
+=== Variantenverfügbarkeit einstellen
+
+:market-availability: {market}
+:option-availability: {market}
+:mirakl-variantenverfuegbarkeit-aktivieren:
+:mirakl-herkunft:
+
+include::partial$variantenverfuegbarkeit.adoc[]
+
 [#varianten-mit-katalog-kategorie-verknüpfen]
-== Varianten mit {market}-Kategorie verknüpfen
+=== Varianten mit {market}-Kategorie verknüpfen
 
 include::partial$mirakl-data-link-categories.adoc[]
 
 [#eigenschaften-mit-varianten-verknuepfen]
-== Eigenschaften mit Varianten verknüpfen und Werte speichern
+=== Eigenschaften mit Varianten verknüpfen und Werte speichern
 
 include::partial$properties-link.adoc[]
 
@@ -144,14 +159,6 @@ include::partial$properties-link.adoc[]
 
 include::partial$mirakl-data-attribute-tool.adoc[]
 
-[#catalogue-activation]
-== Katalogexport aktivieren
-
-:interval: täglich
-:market: {market}
-
-include::partial$catalogue-activation.adoc[]
-
 [#produkt-und-angebotsdaten]
 == Produkt- und Angebotsdaten übertragen
 
@@ -160,15 +167,13 @@ include::partial$catalogue-activation.adoc[]
 
 include::partial$mirakl-data-product-data-export.adoc[]
 
-[#variantenverfuegbarkeit]
-== Variantenverfügbarkeit einstellen
+[#catalogue-activation]
+== Katalogexport aktivieren
 
-:market-availability: {market}
-:option-availability: {market}
-:mirakl-variantenverfuegbarkeit-aktivieren:
-:mirakl-herkunft:
+:interval: täglich
+:market: {market}
 
-include::partial$variantenverfuegbarkeit.adoc[]
+include::partial$catalogue-activation.adoc[]
 
 [#auftragsabwicklung-automatisieren]
 == Auftragsabwicklung automatisieren
