--- a/docs/de-de/modules/maerkte/partials/mirakl-data-link-categories.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-link-categories.adoc
@@ -1,3 +1,5 @@
+//TODO: Gibt es hierfür ein besseres Include?
+
 Wenn du mit dem Assistenten *{assistant-name} Catalog* ein Marktplatz-Format für {market} erstellt hast, wird in deinem plentymarkets System die Eigenschaft *{market} Kategoriegruppe* erstellt. Mit dieser Eigenschaft legst du fest, in welcher Kategorie deine Varianten auf {market} verkauft werden.
 
 Im ersten Schritt *Einstellungen* des Assistenten *{assistant-name} Catalog* wählst du für jeden Katalog eine {market}-Kategorie. Jede dieser Kategorien wird als Auswahlwert zu der Eigenschaft *{market} Kategoriegruppe* hinzugefügt.
