--- a/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
@@ -123,8 +123,9 @@ In diesem Kapitel erfährst du, wie du Angebotsdaten an den Marktplatz überträ
 * Die Plugins link:{marketplace-url}[{market}^] sowie *Mirakl Connector* wurden im plentyMarketplace gekauft, heruntergeladen und in einem Plugin-Set installiert und bereitgestellt.
 * Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte *{market}* und *Mirakl* aktiviert.
 * Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen.
-** *Bestand synchronisieren* ist im Datenaustausch-Schritt aktiviert, damit die Angebote korrekt übertragen werden.
-* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem bestehenden Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert *_oder_* ein neuer Verkaufspreis ist erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert wurden.
+*_Wichtig:_* Im Schritt *Datenaustausch* des Assistenten muss die Option *Bestand synchronisieren* aktiviert sein, damit Angebote korrekt übertragen werden.
+* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem bestehenden Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
+*_Oder:_* Ein neuer Verkaufspreis ist erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert wurden.
 
 Die Angebotsübertragung findet alle 15 Minuten statt. Es werden nur Artikel übertragen, die die folgenden Voraussetzungen erfüllen:
 
