--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -33,6 +33,9 @@ include::partial$assistant-basic-instructions.adoc[]
 | Datenaustausch
 | Wähle die Prozesse, für die du den Datenaustausch zwischen plentymarkets und Mirakl aktivieren möchtest. +
 
+*Bestand synchronisieren* = Aktivieren, um Angebotsdaten zu übertragen. +
+*Produkte exportieren* = Aktivieren, um Produktdaten zu übertragen.
+
 ifdef::mediamarkt[]
 *_Wichtig:_* Der Import und der Export für Auftragsrechnungen darf _nicht_ aktiviert werden.
 endif::mediamarkt[]
