--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -112,3 +112,11 @@ Angebotspreis festlegen:
 . Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
 . Speichere ein Datum für die Eigenschaft.
 endif::voelkner[]
+
+[.collapseBox]
+.Was ist eine Eigenschaft?
+--
+Mit Eigenschaften kannst du deine Varianten detailliert beschreiben. Du kannst beispielweise technische Details einer Variante angeben, indem du eine Eigenschaft dafür anlegst, wie zum Beispiel die Eigenschaft _Bluetooth_ für Kopfhörer. +
+Außerdem kannst du Eigenschaften verwenden, um Informationen an einer Variante zu speichern, die ein Marktplatz verlangt, für die es aber keine eigene Einstellung in plentymarkets gibt. So kannst du beim Artikelexport über Kataloge für alle Datenfelder des Marktplatzes, für die es in plentymarkets keine eigene Einstellung gibt, Eigenschaften anlegen und mit den Datenfeldern verknüpfen. Wenn der Marktplatz zum Beispiel bestimmte Spezifikationen für Kontaktlinsen verlangt, kannst du diese mit Eigenschaften angeben. +
+Du willst noch mehr über Eigenschaften wissen? Weitere Informationen findest du auf der Seite xref:artikel:eigenschaften.adoc#500[Merkmale und Eigenschaften].
+--
