--- a/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-creating-properties.adoc
@@ -8,31 +8,26 @@ Außerdem kannst du Eigenschaften verwenden, um Informationen an einer Variante 
 Du willst noch mehr über Eigenschaften wissen? Weitere Informationen findest du auf der Seite xref:artikel:eigenschaften.adoc#500[Merkmale und Eigenschaften].
 --
 
-ifdef::mediamarkt[]
-Im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst du die Eigenschaften, die MediaMarkt vorgibt.
-endif::mediamarkt[]
-
 ifdef::conrad,voelkner[]
 Bei {market} sind die folgenden Eigenschaften automatisch in deinem plentymarkts System vorhanden und werden im Assistenten zugeordnet:
-endif::conrad,voelkner[]
-
-ifdef::mediamarkt[]
-Du benötigst die folgenden Eigenschaften für MediaMarkt:
-endif::mediamarkt[]
 
 * Logistikklasse
-** Es handelt sich hier um das Verknüpfen einer Variante mit einem bestimmten Marktplatz-Versandprofil. Die Marktplatz-Versandprofile kannst du dir im Marktplatz-Backend unter *Plattformeinstellungen > Versand* ansehen. Der Wert in Klammern ist der Wert, der übertragen werden muss.
 * Versandvorlaufzeit
-** Es handelt sich hier um die sogenannte _leadtime-to-ship_, also die Zeit in Tagen, die ein:e Händler:in von der Auftragsannahme bis zur Versandmeldung benötigt. Hier muss eine ganze Zahl übermittelt werden, die zwischen 1 und 45 liegt.
-ifdef::conrad,voelkner[]
 * Abzugsverfahren
-** Es handelt sich hier um das so genannte _Reverse-Charge-Verfahren_. Es kann entweder `true` oder `false` übertragen werden.
-endif::conrad,voelkner[]
 * update-delete
-** Die Option, ein Angebot löschen zu können. Wenn an der Variante nichts gewählt wird, wird standardmäßig `update` vom Marktplatz verwendet.
+endif::conrad,voelkner[]
 
 ifdef::mediamarkt[]
-[discrete]
+Im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration* erstellst du die Eigenschaften, die MediaMarkt vorgibt.
+Du benötigst die folgenden Eigenschaften für MediaMarkt:
+
+* Logistikklasse
+* Versandvorlaufzeit
+* update-delete
+endif::mediamarkt[]
+
+ifdef::mediamarkt[]
+[#property-logistic-class]
 === Eigenschaft Logistikklasse erstellen
 
 Für jede Variante muss ein Versandprofil-Code an {market} exportiert werden. Versandprofile erstellst du im Mirakl-Backend. Die Liste der Versandprofile wird im Mirakl-Backend im Bereich *Plattformeinstellungen > Versand* angezeigt. Der Code wird in der Spalte *Logistikklasse* in Klammern hinter dem Namen der Logistikklasse angezeigt.
@@ -50,10 +45,10 @@ include::partial$properties-creation-table.adoc[]
 endif::mediamarkt[]
 
 ifdef::mediamarkt[]
-[discrete]
+[#property-leadtime-to-ship]
 === Eigenschaft Versandvorlaufzeit erstellen
 
-Du kannst für jede Variante die Versandvorlaufzeit angeben. Die Versandvorlaufzeit ist die Zeit in Tagen, die ein:e Händler:in von der Auftragsannahme bis zur Versandanmeldung benötigt.
+Du kannst für jede Variante eine Versandvorlaufzeit angeben. Die Versandvorlaufzeit wird auch leadtime-to-ship bezeichnet und ist die Zeit in Tagen, die Händler:innen von der Auftragsannahme bis zur Versandanmeldung benötigen. +
 *_Hinweis:_* Du musst für die Versandvorlaufzeit eine ganze Zahl zwischen 1 und 45 angeben.
 
 :property: Versandvorlaufzeit
