update age rating field in address options

--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -709,7 +709,8 @@ Enter `0` for active and `1` for not active.
 
 
 | *Age rating*
-|Is there an age rating?
+|Is there an age rating? +
+Select an option from the drop-down list.
 
 | *Date of birth*
 |Enter the contact’s date of birth in the format `dd.mm.yyyy`.
