--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -377,7 +377,7 @@ Es kann vorkommen, dass deine Unterkategorien nicht mit denen von Kaufland.de ü
 [#prepare-characteristics]
 === Merkmale vorbereiten
 
-Breite nun deine Merkmale für den Marktplatz vor.
+Bereite nun deine Merkmale für den Marktplatz vor.
 
 [#500]
 ==== Merkmale für Marktplatz aktivieren
@@ -418,7 +418,8 @@ Weitere Informationen zur Merkmalverknüpfung bei Kaufland.de findest du auf der
 [#catalogue-export]
 === _Möglichkeit 2:_ Katalogexport _(empfohlen)_
 
-Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du im Menü *Einrichtung » Assistenten » Omni-Channel* mit dem Assistenten *Kaufland - Kataloge erstellen*. 
+Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über einen Katalog zu Kaufland exportiert. +
+Kataloge für Kaufland erstellst du im Menü *Einrichtung » Assistenten » Omni-Channel* mit dem Assistenten *Kaufland - Kataloge erstellen*. 
 
 include::partial$catalogue-new-to-text.adoc[]
 
@@ -428,7 +429,8 @@ include::partial$catalogue-new-to-text.adoc[]
 Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du mit dem Assistenten *Kaufland - Kataloge erstellen* im Menü *Einrichtung » Assistenten » Omni-Channel*. Verknüpfe anschließend im eben erstellten Katalog die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. +
 Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich automatisch zu {market} exportiert.
 
-Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Fernseher* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Kameras*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
+Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Fernseher* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Kameras*. +
+Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
 *_Hinweis:_* Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
 
@@ -462,7 +464,8 @@ Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beisp
 *_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar.
 
 | Für welche Kaufland-Kategorie soll ein Katalog erstellt werden? Erstelle einen Katalog für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest.
-| Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
+| Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. +
+Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
 
 | Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
 | Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
