Added translations for Kaufland

--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -1,7 +1,8 @@
 [discrete]
 ===== Different data fields in the Kaufland product categories
 
-You have to create a separate catalogue for each Kaufland product category that you want to offer your items in. Catalogues for different product categories contain different data fields. This is because different item data has to be specified in each product category. For example, you export different item data in a catalogue for *TVs* than in a catalogue for *Cameras*. +
+You have to create a separate catalogue for each Kaufland product category that you want to offer your items in. +
+Catalogues for different product categories contain different data fields. This is because different item data has to be specified in each product category. For example, you export different item data in a catalogue for *TVs* than in a catalogue for *Cameras*. +
 However, some data fields are the same in each category. Only the recommended mappings for those data fields are described here.
 
 * Further information about the mandatory fields for Kaufland can be found link:https://www.kaufland.de/product-data/en/mandatory-attributes/[here^].
@@ -30,8 +31,9 @@ However, some data fields are the same in each category. Only the recommended ma
 
 | condition
 | yes
-| Indicates the condition of the variation. +
-* Property of the type *Text* or *Selection*, possible values: NEW, USED&#95;&#95;&#95;AS&#95;NEW, USED&#95;&#95;&#95;VERY&#95;GOOD, USED&#95;&#95;&#95;GOOD, USED&#95;&#95;&#95;ACCEPTABLE
+a| Indicates the condition of the variation.
+
+* Property of the type *Text* or *Selection*, possible values: NEW, USED___AS_NEW, USED___VERY_GOOD, USED___GOOD, USED___ACCEPTABLE
 
 | listing_price
 | yes
@@ -45,18 +47,22 @@ If other sellers offer the same product, your price is automatically reduced. Yo
 
 | amount
 | yes
-| The stock of the variation. +
-* *Stock »* [Select 1 or more warehouses] +
+a| The stock of the variation.
+
+* *Stock »* [Select 1 or more warehouses]
+
 *_Tip:_* Use the data fields in the group *Virtual warehouse* to export the stock quantity sum of all sales warehouses.
 
 | note
 | no
-| Additional information about the condition of the variation (for used items). +
+a| Additional information about the condition of the variation (for used items).
+
 * Property of the type *Text*
 
 | handling_time
 | yes
-| The processing time in days. +
+a| The processing time in days.
+
 * Property of the type *Int* (whole number)
 
 | id_warehouse
@@ -66,7 +72,8 @@ If other sellers offer the same product, your price is automatically reduced. Yo
 
 | id_shipping_group
 | yes
-| The ID of the shipping group. +
+a| The ID of the shipping group.
+
 * Property of the type *Selection* or *Whole number*
 
 3+| Product data +
