Edited recommended mappings and assistant texts

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -458,13 +458,11 @@ Katalog mit dem Assistenten erstellen:
 | Für welches Kaufland-Konto soll dieser Katalog genutzt werden?
 | Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll.
 
-| Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Die verfügbaren Länderplattformen werden als Ländercodes angezeigt. Bei Kaufland heißen die Länderplattformen Storefronts.
-| Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
-Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
-*_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar.
-
-| Für welche Kaufland-Kategorie soll ein Katalog erstellt werden? Erstelle einen Katalog für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest.
-| Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. +
+| Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Wähle anschließend eine Kaufland-Produktkategorie. Für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest, muss ein eigener Katalog erstellt werden.
+| Hier wählst du die Kaufland-Länderplattform und die Kaufland-Produktkategorie, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
+Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. Bei Kaufland heißen die Länderplattformen Storefronts. +
+*_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar. +
+Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. +
 Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
 
 | Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
