--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -432,7 +432,7 @@ After you activate the catalogue, the catalogue data is automatically exported t
 There is a separate catalogue format for each Kaufland product category. Different item data is exported in the different catalogue formats, depending on which information Kaufland requires for each product category. For example, different item data has to be mapped in the catalogues for *TVs* and *Cameras*. +
 This means that you have to create a separate catalogue for each Kaufland product category that you want to sell your items in.
 
-*_Note:_* At present, you can only create Kaufland catalogues with the assistant *Kaufland - Creating catalogues* and not in the _Data » Catalogues_ menu.
+*_Note:_* At present, you can only create Kaufland catalogues with the assistant *Kaufland - Creating catalogues* and _not_ in the *Data » Catalogues* menu.
 
 :number-of-boxes: info box
 
