ADD more work to the warehouse page

--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -5,11 +5,11 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 12.07.2022
+zuletzt bearbeitet 13.07.2022
 ////
 
 Diese Seite beschreibt, wie du dein Lager 1:1 in plentymarkets abbildest.
-Indem du deine Lagerstruktur festlegst, kannst du später:
+Indem du deine Lagerstruktur angibst, kannst du später:
 
 * sehen, wo jeder Artikel gelagert ist.
 So verschwendest du keine unnötige Zeit mit der Suche, wenn du Waren empfängst oder kommissionierst.
@@ -333,7 +333,7 @@ xref:auftraege:grundeinstellungen.adoc#[Weitere Informationen].
 [#400]
 === Dimensionen
 
-In diesem Schritt legst du fest, wie dein Lager strukturiert ist.
+In diesem Schritt gibst du an, aus welchen Strukturelementen sich dein Lager zusammensetzt.
 Das heißt, du zählst die verschiedenen Ebenen auf, wie zum Beispiel Halle, Zone, Gang, Regal und Regalboden.
 
 [discrete]
@@ -355,12 +355,13 @@ Wichtig ist nur, dass du folgende Punkte beachtest:
 * Mindestens eine Dimension wird benötigt.
 * Es können bis zu 10 Dimensionen pro Lager erstellt werden.
 * Die Lagerorte selbst sind keine Dimensionen.
+Lagerorte werden in einem späteren Kapitel näher erläutert.
 ====
 
 [discrete]
 ==== Dimensionen anlegen
 
-Sobald du die Dimensionen fertig skizziert hast, kannst du sie in plentymarkets anlegen.
+Sobald du deine Dimensionen fertig skizziert hast, kannst du sie in plentymarkets anlegen.
 Erstelle zuerst die kleinste, d.h. die spezifischste Dimension, dann die zweitkleinste, usw.
 
 //Beginne beim Anlegen mit der kleinsten bzw. spezifischsten Dimension (z.B. Regalboden). Diese wird dann das höchste Level erhalten (z.B. bei 4 erstellten Dimensionen Level 4). Beachte also, dass die Dimension mit dem höchsten Level die kleinste Dimension im Lager sein wird. Erstelle die Dimensionen deshalb der Größe nach aufsteigend (z.B. Regalboden (Level 4) > Regal (Level 3) > Zone (Level 2) > Lagerhalle (Level 1)).
