--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -62,9 +62,17 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 include::partial$verkaufspreis-festlegen.adoc[]
 
 [#eigenschaften-erstellen]
-=== Eigenschaften erstellen
+== Eigenschaften erstellen
 
 include::partial$mirakl-creating-properties.adoc[]
+
+//TODO: Wo soll das Kapitel hin!?!?!?
+[#attribut-hilfetool]
+=== Attribut-Hilfetool nutzen
+
+:market-attribute-help-tool: voelkner
+
+include::partial$mirakl-data-attribute-tool.adoc[]
 
 [#artikelexport-katalog]
 == Artikelexport einrichten
@@ -150,14 +158,6 @@ include::partial$mirakl-data-link-categories.adoc[]
 === Eigenschaften mit Varianten verknüpfen und Werte speichern
 
 include::partial$properties-link.adoc[]
-
-//TODO: Wo soll das Kapitel hin!?!?!?
-[#attribut-hilfetool]
-=== Attribut-Hilfetool nutzen
-
-:market-attribute-help-tool: voelkner
-
-include::partial$mirakl-data-attribute-tool.adoc[]
 
 [#produkt-und-angebotsdaten]
 == Produkt- und Angebotsdaten übertragen
