--- a/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-product-data-export.adoc
@@ -1,13 +1,13 @@
-Bei {market} erfolgt der Listingprozess in zwei Schritten:
+Bei {market} erfolgt der Listing-Prozess in zwei Schritten:
 
-* Zuerst werden Produkte erstellt.
-* Nach Freigabe der Produktdaten vom Marktplatz können Angebote zu den erstellten Produkten aktiviert werden.
+* Produktdaten: Produktdaten werden benötigt, um Produkte auf {market} zu erstellen. Diese Daten müssen vom Marktplatz freigegeben werden.
+* Angebotsdaten: Nachdem die Produktdaten vom Marktplatz freigegeben wurden, können Angebote zu den erstellten Produkten aktiviert werden.
 
-Beide Exportprozesse, ihre Voraussetzungen und Übertragungsoptionen werden in den folgenden Unterkapiteln beschrieben.
-
-[#produktdaten-ubertragen]
-=== Voraussetzungen für die Produktdatenübertragung
-
+[tabs]
+====
+Voraussetzungen für Produktdatenübertragung::
++
+--
 Die Produktdaten kommen aus dem von dir erstellten Katalog *{assistant-name} Catalog*. Die folgenden Voraussetzungen müssen erfüllt sein, damit Produktdaten übertragen werden.
 
 * Die Plugins link:{marketplace-url}[{market}^] sowie *Mirakl Connector* wurden im plentyMarketplace gekauft, heruntergeladen und in einem Plugin-Set installiert und bereitgestellt.
@@ -21,7 +21,7 @@ Die Produktdaten kommen aus dem von dir erstellten Katalog *{assistant-name} Cat
 ifdef::conrad[]
 [IMPORTANT]
 .Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
-====
+======
 Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
 Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen.
 
@@ -31,25 +31,81 @@ Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* 
 
 Das Produktexportfeld *Produkt-ID (Artikelnr. des Verkäufers)* wird je nach Einstellung im Katalog gefüllt.
 Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
-====
+======
 endif::conrad[]
 
 ifdef::voelkner[]
 [IMPORTANT]
 .Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
-====
+======
 Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
 Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen, kann aber mit einem anderen Wert überschrieben werden, z.B. *SKU*. Wähle dazu an der Variante die Eigenschaft für Product ID Type *SKU* und ordne die Eigenschaft im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* dem entsprechende Datenfeld zu.
 Das Produktexportfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* wird je nach Zuordnung im Katalog gefüllt.
 
 Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
-====
+======
 
 *_Tipp:_* Ordne im Katalog dem Datenfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* die Marktplatz-SKU zu. Wähle als Ausweich-Datenfeld die *Varianten-ID*.
 endif::voelkner[]
+--
+ 
+Voraussetzungen für Angebotsdatenübertragung::
++
+--
+* Die Plugins link:{marketplace-url}[{market}^] sowie *Mirakl Connector* wurden im plentyMarketplace gekauft, heruntergeladen und in einem Plugin-Set installiert und bereitgestellt.
+* Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte *{market}* und *Mirakl* aktiviert.
+* Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen.
+*_Wichtig:_* Im Schritt *Datenaustausch* des Assistenten muss die Option *Bestand synchronisieren* aktiviert sein, damit Angebote korrekt übertragen werden.
+* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem bestehenden Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
+*_Oder:_* Ein neuer Verkaufspreis ist erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert wurden.
+
+Die Angebotsübertragung findet alle 15 Minuten statt. Es werden nur Artikel übertragen, die die folgenden Voraussetzungen erfüllen:
+
+* An der Variante sind die Auftragsherkünfte *Mirakl* und *{market}* aktiviert.
+* An der Variante ist ein Preis aktiv, der für *{market}*, *Mirakl* und *WEB-API* aktiviert wurde.
+* An dem Artikel (bzw. an der Variante) ist ein Versandprofil aktiv, das für *{market}*, *Mirakl* und *WEB-API* aktiviert wurde.
+* An der Variante ist ein Wert als Marktplatz-SKU für *{market}* hinterlegt.
+* Für die Einstellung *Beschränkung* der Variante ist entweder die Option *Auf Netto-WB* oder die Option *Keine* eingestellt.
+* Die Variante hat positiven Bestand.
+* An der Variante hat in den letzten 15 Minuten eine Änderung an Bestand oder Preis stattgefunden. +
+*_Wichtig:_* Das Setzen eines neuen Zeitstempels über die Gruppenfunktion oder Stapelverarbeitung allein reicht nicht, um die Variante zu übertragen.
+
+ifdef::conrad[]
+[IMPORTANT]
+.Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
+======
+Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
+Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen.
+
+// * Wenn *SKU* gewählt wird, muss die SKU vom Marktplatz als Marktplatz-SKU an der Variante definiert werden.
+// * Wenn *EAN* gewählt wird, muss die EAN der Variante als Marktplatz-SKU an der Variante definiert werden. Bitte nicht verwenden, diese Funktion ist noch nicht im Marktplatz aktiv
+// * Wenn *ISBN* gewählt wird, muss die ISBN der Variante als Marktplatz-SKU an der Variante definiert werden. Bitte nicht verwenden, diese Funktion ist noch nicht im Marktplatz aktiv
+
+Das Produktexportfeld *Produkt-ID (Artikelnr. des Verkäufers)* wird je nach Einstellung im Katalog gefüllt.
+Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
+======
+endif::conrad[]
+
+ifdef::voelkner[]
+[IMPORTANT]
+.Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
+======
+Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
+Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen, kann aber mit einem anderen Wert überschrieben werden, z.B. *SKU*. Wähle dazu an der Variante die Eigenschaft für Product ID Type *SKU* und ordne die Eigenschaft im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* dem entsprechende Datenfeld zu.
+Das Produktexportfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* wird je nach Zuordnung im Katalog gefüllt.
+
+Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
+======
+
+*_Tipp:_* Ordne im Katalog dem Datenfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* die Marktplatz-SKU zu. Wähle als Ausweich-Datenfeld die *Varianten-ID*.
+endif::voelkner[]
+--
+====
+
 
 ////
 //TODO: Prüfen, ob das sichtbar sein sollte.
+Bezieht sich auf Produktdaten!
 === Werte für die Übertragung an den Marktplatz definieren
 
 Die Werte *product-id* und *sku* werden wie folgt übertragen:
@@ -68,13 +124,13 @@ Daraus ergeben sich die folgenden Zuordnungen für die Produktübertragung:
 ifdef::conrad,voelkner[]
 === Produktdaten aktualisieren
 
-Du kannst Produktdaten jederzeit aktualisieren. Ausgeschlossen davon sind jedoch die folgenden Produktdaten:
+Du kannst Produktdaten jederzeit aktualisieren. Ausgeschlossen davon sind aber die folgenden Produktdaten:
 
 * Verpackungseinheiten
 * Hersteller-Teilenummer
 * Artikelnummer des Verkäufers
 
-Wenn du eines oder mehrere dieser Felder ändern möchtest, musst du das Produkt zuerst löschen und dann neu übertragen. Das geht so:
+Wenn du eine oder mehrere dieser Informationen ändern möchtest, musst du das Produkt erst löschen und dann neu übertragen. Das geht so:
 
 [.instruction]
 Produktdaten aktualisieren:
@@ -112,86 +168,60 @@ Voelkner bietet einen EAN-Abgleich an. Bitte dein:e Ansprechpartner:in vom Markt
 Für diese Werte ist es nicht notwendig, die Produktdaten zu übertragen. Über die zur Verfügung gestellten SKUs kannst du direkt ein Angebot erstellen. Die SKU muss als Marktplatz-SKU an der Variante importiert werden und als *product-id-type* muss an der Variante *sku* gewählt werden. Achte darauf, dass du keinen Eigenschaftswert für die Eigenschaft *Voelkner Kategoriegruppe* an diesen Varianten definierst.
 endif::voelkner[]
 
-[#angebotsdaten-uebertragen]
-=== Angebotsdaten übertragen
-
-In diesem Kapitel erfährst du, wie du Angebotsdaten an den Marktplatz überträgst und welche Voraussetzungen erfüllt werden müssen. Diese Daten kommen aus dem Assistenten *{assistant-name}*, den du bereits durchlaufen hast.
-
-
-=== Voraussetzungen für die Angebotsdatenübertragung
-
-* Die Plugins link:{marketplace-url}[{market}^] sowie *Mirakl Connector* wurden im plentyMarketplace gekauft, heruntergeladen und in einem Plugin-Set installiert und bereitgestellt.
-* Im Menü *Einrichtung » Aufträge » Auftragsherkunft* wurden die Auftragsherkünfte *{market}* und *Mirakl* aktiviert.
-* Im Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set wählen] » {assistant-name}* wurde die Grundeinrichtung vorgenommen.
-*_Wichtig:_* Im Schritt *Datenaustausch* des Assistenten muss die Option *Bestand synchronisieren* aktiviert sein, damit Angebote korrekt übertragen werden.
-* Im Menü *Einrichtung » Artikel » Verkaufspreise* sind an einem bestehenden Preis die Auftragsherkünfte *Mirakl* und *{market}* aktiviert. +
-*_Oder:_* Ein neuer Verkaufspreis ist erstellt, in dem die Auftragsherkünfte *Mirakl* und *{market}* aktiviert wurden.
-
-Die Angebotsübertragung findet alle 15 Minuten statt. Es werden nur Artikel übertragen, die die folgenden Voraussetzungen erfüllen:
-
-* An der Variante sind die Auftragsherkünfte *Mirakl* und *{market}* aktiviert.
-* An der Variante ist ein Preis aktiv, der für *{market}*, *Mirakl* und *WEB-API* aktiviert wurde.
-* An dem Artikel (bzw. an der Variante) ist ein Versandprofil aktiv, das für *{market}*, *Mirakl* und *WEB-API* aktiviert wurde.
-* An der Variante ist ein Wert als Marktplatz-SKU für *{market}* hinterlegt.
-* Für die Einstellung *Beschränkung* der Variante ist entweder die Option *Auf Netto-WB* oder die Option *Keine* eingestellt.
-* Die Variante hat positiven Bestand.
-* An der Variante hat in den letzten 15 Minuten eine Änderung an Bestand oder Preis stattgefunden. +
-*_Wichtig:_* Das Setzen eines neuen Zeitstempels über die Gruppenfunktion oder Stapelverarbeitung allein reicht nicht, um die Variante zu übertragen.
-
-ifdef::conrad[]
-[IMPORTANT]
-.Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
-====
-Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
-Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen.
-
-// * Wenn *SKU* gewählt wird, muss die SKU vom Marktplatz als Marktplatz-SKU an der Variante definiert werden.
-// * Wenn *EAN* gewählt wird, muss die EAN der Variante als Marktplatz-SKU an der Variante definiert werden. Bitte nicht verwenden, diese Funktion ist noch nicht im Marktplatz aktiv
-// * Wenn *ISBN* gewählt wird, muss die ISBN der Variante als Marktplatz-SKU an der Variante definiert werden. Bitte nicht verwenden, diese Funktion ist noch nicht im Marktplatz aktiv
-
-Das Produktexportfeld *Produkt-ID (Artikelnr. des Verkäufers)* wird je nach Einstellung im Katalog gefüllt.
-Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
-====
-endif::conrad[]
-
-ifdef::voelkner[]
-[IMPORTANT]
-.Wie hängen die Angebotsfelder, das Produktexportfeld und die Marktplatz-SKU an der Variante zusammen?
-====
-Die Angebotsfelder *sku* und *product-id* werden grundsätzlich immer mit dem Wert gefüllt, der an der Variante im Feld *Marktplatz-SKU* für den Marktplatz definiert wurde.
-Das Angebotsfeld *product-id-type* wird standardmäßig mit dem Wert *SHOP_SKU* übertragen, kann aber mit einem anderen Wert überschrieben werden, z.B. *SKU*. Wähle dazu an der Variante die Eigenschaft für Product ID Type *SKU* und ordne die Eigenschaft im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* dem entsprechende Datenfeld zu.
-Das Produktexportfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* wird je nach Zuordnung im Katalog gefüllt.
-
-Bei der ersten Übertragung, die über Nacht stattfindet, wird die Marktplatz-SKU an der Variante in plentymarkets automatisch aus der Varianten-ID gebildet. Die Marktplatz-SKU kann alternativ per Import oder manuell definiert werden.
-====
-
-*_Tipp:_* Ordne im Katalog dem Datenfeld *Die eindeutige Nummer (ID) des Artikels im System des Sellers* die Marktplatz-SKU zu. Wähle als Ausweich-Datenfeld die *Varianten-ID*.
-endif::voelkner[]
-
-ifdef::voelkner[]
-=== Fehlerberichte
-
-Berichte zu Produkt- und Angebotsübertragungen an Voelkner kannst du über die Menüs *Daten » Voelkner Artikelexport-Berichte* und *Daten » Voelkner Angebotsexport-Berichte* einsehen und herunterladen.
-endif::voelkner[]
-
-[discrete]
+[#other-data-fields]
 === Weitere Datenfelder, die bei der Angebotsübertragung übermittelt werden
 
-* *sku* und *product-id*: Diese Felder werden automatisch mit dem Wert befüllt, der als Marktplatz-SKU an der Variante hinterlegt wurde.
+Bestimmte Marktplatz-Datenfelder werden bei der Übertragung von Angeboten automatisch von plentymarkets befüllt.
+
+[[table-other-data-fields]]
+.Marktplatz-Datenfelder, die bei der Angebotsübertragung übermittelt werden
+[cols="1,3a"]
+|===
+|Einstellung |Erläuterung
+
+| *sku* +
+*product-id*
+| Diese Felder werden automatisch mit dem Wert befüllt, der als Marktplatz-SKU an der Variante hinterlegt wurde.
+
 ifdef::conrad,voelkner[]
-* *product-id-type*: Dieses Feld wird standardmäßig mit dem Wert *SHOP_SKU* befüllt.
+| *product-id-type*
+| Dieses Feld wird standardmäßig mit dem Wert *SHOP_SKU* befüllt.
 endif::conrad,voelkner[]
-* *price*: Dieses Feld wird automatisch mit dem Wert befüllt, der an der Variante für den am Marktplatz aktivierten Preis definiert wurde. Wurden mehrere Verkaufspreise an der Variante definiert, die ebenfalls für den Marktplatz freigegeben sind, wird der Preis mit der niedrigsten ID exportiert.
-* *quantity*: Dieses Feld wird automatisch mit dem Nettobestand oder den summierten Nettobeständen aus den Lagern befüllt, die im Assistent *{assistant-name}* im Schritt *Lagerauswahl* gewählt wurden.
-* *min-quantity-alert*: Dieses Feld wird automatisch mit dem Wert *1* übertragen.
-* *state*: Dieses Feld wird standardmäßig mit dem Wert *11* übertragen. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen anderen Wert zu übertragen.
-* *available-start-date*: Dieses Feld wird automatisch mit einem Zeitstempel übertragen.
-* *price-ranges*: In diesem Feld werden ein oder mehrere xref:artikel:preise.adoc#100[Verkaufspreise] übertragen.
-* *allow-quote-requests*: Dieses Feld wird automatisch mit dem Wert *false* übertragen.
-* *logistic-class*: Dieses Feld ist standardmäßig nicht befüllt. Wenn kein Wert übertragen wird, wird die Variante mit dem kostenlosen Versandprofil *{profile-free-shipping}* verknüpft. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen anderen Wert zu übertragen. Die gültigen Versandprofilcodes findest du im {market} Backend unter *{market-backend-shipping}*. Die Codes werden in Klammern dargestellt.
-* *leadtime-to-ship*: Dieses Feld ist ein Pflichtfeld und ist standardmäßig nicht befüllt. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen Wert zu übertragen. Hier sind nur ganze Zahlen zwischen 1 und 45 gültig.
+
+| *price*
+| Dieses Feld wird automatisch mit dem Wert befüllt, der an der Variante für den am Marktplatz aktivierten Preis definiert wurde. Wurden mehrere Verkaufspreise an der Variante definiert, die ebenfalls für den Marktplatz freigegeben sind, wird der Preis mit der niedrigsten ID exportiert.
+| *quantity*
+| Dieses Feld wird automatisch mit dem Nettobestand oder den summierten Nettobeständen aus den Lagern befüllt, die im Assistent *{assistant-name}* im Schritt *Lagerauswahl* gewählt wurden.
+
+| *min-quantity-alert*
+| Dieses Feld wird automatisch mit dem Wert *1* übertragen.
+
+| *state*
+| Dieses Feld wird standardmäßig mit dem Wert *11* übertragen. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen anderen Wert zu übertragen.
+
+| *available-start-date*
+| Dieses Feld wird automatisch mit einem Zeitstempel übertragen.
+
+| *price-ranges*
+| In diesem Feld werden ein oder mehrere xref:artikel:preise.adoc#100[Verkaufspreise] übertragen.
+
+| *allow-quote-requests*
+| Dieses Feld wird automatisch mit dem Wert *false* übertragen.
+
+| *logistic-class*
+| Dieses Feld ist standardmäßig nicht befüllt. Wenn kein Wert übertragen wird, wird die Variante mit dem kostenlosen Versandprofil *{profile-free-shipping}* verknüpft. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen anderen Wert zu übertragen. Die gültigen Versandprofilcodes findest du im {market} Backend unter *{market-backend-shipping}*. Die Codes werden in Klammern dargestellt.
+
+| *leadtime-to-ship*
+| Dieses Feld ist ein Pflichtfeld und ist standardmäßig nicht befüllt. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante einen Wert zu übertragen. Hier sind nur ganze Zahlen zwischen 1 und 45 gültig.
+
 ifdef::conrad,voelkner[]
-* *reversecharge*: Dieses Feld ist ein Pflichtfeld und ist standardmäßig nicht befüllt. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante entweder `true` oder `false` zu übertragen.
+| *reversecharge*
+| Dieses Feld ist ein Pflichtfeld und ist standardmäßig nicht befüllt. Im Assistentenschritt *Zuordnung der Angebots-Eigenschaften* kannst du eine Eigenschaft zuordnen, um pro Variante entweder `true` oder `false` zu übertragen.
 endif::conrad,voelkner[]
-* *min-order-quantity*: Dieses Feld wird automatisch mit dem Wert *Min. Bestellmenge*, der an der Variante gespeichert ist, übertragen.
-* *max-order-quantity*: Dieses Feld wird automatisch mit dem Wert *Max. Bestellmenge*, der an der Variante gespeichert ist, übertragen.
+
+| *min-order-quantity*
+| Dieses Feld wird automatisch mit dem Wert *Min. Bestellmenge*, der an der Variante gespeichert ist, übertragen.
+
+| *max-order-quantity*
+| Dieses Feld wird automatisch mit dem Wert *Max. Bestellmenge*, der an der Variante gespeichert ist, übertragen.
+|===
