--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -754,6 +754,10 @@ Use the drop-down list *Date* to select which date is displayed on the document.
 Optionally, you can enter a *Comment* which will be added in the document underneath the order items. +
 Use the drop-down list *Date* to select which date is displayed on the document. By selecting *Standard*, the current date is displayed on the document. By selecting *Credit note date*, the same date as on the invoice is displayed on the document.
 
+| *Generate reversal dunning letter*
+|The procedure generates a xref:orders:generating-dunning-letters.adoc#400[reversal dunning letters] for an order. A reversal document cancels the dunning letter and not the order itself. Thus, the reversal document is only generated if a dunning letter exists for the order. +
+Optionally, you can enter a *Comment* which will be added in the document underneath the order items.
+
 | *Generate pro forma invoice*
 |The procedure generates a xref:orders:generating-pro-forma-invoice.adoc#[pro forma invoice] for an order. +
 Optionally, you can enter a *Comment* which will be added in the document underneath the order items.
