--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -121,7 +121,9 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 *_Hinweis:_* Standardmäßig ist die Option *Datei löschen, nachdem der Import ausgeführt wurde* aktiviert. Die Datei wird also automatisch vom Webspace gelöscht, nachdem die Daten importiert wurden. Wenn die Datei im Webspace gespeichert bleiben soll, deaktiviere diese Option. *_Das Speichern der Datei auf dem Webspace ist kostenpflichtig._*
 
 ! *FTP*
-! *_Ab 21. Juli 2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze diese Option deshalb nicht._*
+! *_Ab 21. Juli 2022 werden plentymarkets FTP-Server nicht mehr unterstützt._* +
+
+Eigene FTP-Server kannst du aber weiterhin nutzen. Nutze diese Option deshalb nur, wenn du einen eigenen FTP-Server verwendest.
 
 ! *HTTPS*
 !
@@ -134,7 +136,9 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 . Wenn du *HTTP-Authentifizierung* gewählt hast, gib *Benutzername* und *Passwort* des Servers ein.
 
 ! *SFTP*
-! *_Ab 21. Juli 2022 unterstützt plentymarkets FTP-Server nicht mehr. Nutze diese Option deshalb nicht._*
+! *_Ab 21. Juli 2022 werden plentymarkets FTP-Server nicht mehr unterstützt._* +
+
+Eigene FTP-Server kannst du aber weiterhin nutzen. Nutze diese Option deshalb nur, wenn du einen eigenen FTP-Server verwendest.
 !===
 
 |===
