--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -100,7 +100,7 @@ Auftragsschnittstelle zu Galaxus einrichten:
 
 == Artikelexport einrichten
 
-Der Artikelexport läuft über die folgenden Elastic-Export-Formate. Diese Formate werden automatisch installiert, wenn du das Plugin bereitstellst.
+Der Artikelexport läuft über die folgenden Elastic-Export-Formate. Wenn du das Plugin bereitstellst, werden diese Formate automatisch installiert.
 
 * *GalaxusProductDataExport*
 * *GalaxusProductPropertiesExport*
@@ -315,7 +315,7 @@ Das Galaxus Plugin exportiert die Artikeldaten über das *Elastic Export Plugin*
 
 === Elastic Export Formate einrichten
 
-Der Artikelexport läuft über die folgenden Elastic-Export-Formate. Diese Formate werden automatisch installiert, wenn du das Plugin bereitstellst.
+Der Artikelexport läuft über die folgenden Elastic-Export-Formate. Wenn du das Plugin bereitstellst, werden diese Formate automatisch installiert.
 
 * *GalaxusProductDataExport*
 * *GalaxusProductPropertiesExport*
@@ -327,7 +327,7 @@ Der Artikelexport läuft über die folgenden Elastic-Export-Formate. Diese Forma
   * *GalaxusProductDataExport*
   * *GalaxusProductPropertiesExport*
   * *GalaxusProductStockPricingExport*
-. Führe die Einrichtung des Exportformats aus.
+. Richte die Exportformate ein.
 . *Speichere* die Einstellungen.
 
 [.collapseBox]
