--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -65,7 +65,7 @@ a| The processing time in days.
 
 * Property of the type *Int* (whole number)
 
-3+a| Warehouse +
+3+a| Warehouses +
 *_Note:_* In the Kaufland catalogues, the mappings for *warehouses* are shown for every Kaufland account. Make sure that you map the data fields for the correct Kaufland account, i.e. the Kaufland account for which you want to use this catalogue. +
 The name and the ID of the Kaufland account are displayed above the mappings: *Account name (ID: account ID)*.
 
